contract_group: allow sub covered elements relate on enrollment form (#2543)
Fix #10784

--- a/modules/contract_group/view/party_enrollment_form.xml
+++ b/modules/contract_group/view/party_enrollment_form.xml
@@ -27,4 +27,10 @@ this repository contains the full copyright notices and license terms. -->
     <field name="options" invisible="1"/>
     <field name="item_desc" invisible="1"/>
     <field name="contract" invisible="1"/>
+    <newline/>
+    <group id="invisible">
+        <button name="button_open_sub_elements" string="Sub Elements" keyword="relate"/>
+        <field name="has_sub_covered_elements" invisible="1"/>
+        <field name="show_name" invisible="1"/>
+    </group>
 </form>
