account_payment_sepa_cog: Iteration (handle reject fee date and use day selector (#2557)
Fix #10899

--- a/modules/account_payment_sepa_cog/view/payment_journal_failure_action_form.xml
+++ b/modules/account_payment_sepa_cog/view/payment_journal_failure_action_form.xml
@@ -3,8 +3,8 @@
 this repository contains the full copyright notices and license terms. -->
 <data>
     <xpath expr="/form/field[@name='reject_number']" position="after">
-        <label name="number_of_day"/>
-        <field name="number_of_day"/>
+        <label name="present_again_day"/>
+        <field name="present_again_day"/>
         <field name="present_again_after" invisible="1"/>
         <newline/>
     </xpath>
