--- a/modules/commission_insurance/view/commission_form.xml
+++ b/modules/commission_insurance/view/commission_form.xml
@@ -22,4 +22,9 @@ this repository contains the full copyright notices and license terms. -->
             <label string="%" id="rate" xexpand="0" xalign="0"/>
         </group>
     </xpath>
+    <xpath expr="/form/field[@name='invoice_state']" position="after">
+        <field name="extra_details" no_command="1" colspan="4"/>
+        <newline/>
+        <label name="calculation_description" string=""/>
+    </xpath>
 </data>
