contract_group: Allow to cancel an enrollment (#2601)
Fix #11077

--- a/modules/contract_group/view/enrollment_form.xml
+++ b/modules/contract_group/view/enrollment_form.xml
@@ -32,5 +32,6 @@ this repository contains the full copyright notices and license terms. -->
         <button name="button_open_sub_elements" string="Sub Elements" keyword="relate"/>
         <field name="has_sub_covered_elements" invisible="1"/>
         <field name="show_name" invisible="1"/>
+        <button string="Cancel Enrollment" icon="tryton-cancel" name="cancel_enrollment"/>
     </group>
 </form>
