--- a/modules/claim/view/benefit_form.xml
+++ b/modules/claim/view/benefit_form.xml
@@ -31,6 +31,8 @@ this repository contains the full copyright notices and license terms. -->
                 <field name="beneficiary_kind"/>
                 <label name="several_delivered"/>
                 <field name="several_delivered"/>
+                <label name="may_have_origin"/>
+                <field name="may_have_origin"/>
                 <newline/>
                 <field name="loss_descs" colspan="4"/>
             </group>
