--- a/modules/endorsement_option_benefit/view/endorsement_option_benefit_displayer_form.xml
+++ b/modules/endorsement_option_benefit/view/endorsement_option_benefit_displayer_form.xml
@@ -3,7 +3,7 @@
 <!-- this repository contains the full copyright notices and license terms. -->
 <form>
     <group id="invisible_benefit" string="" col="4" yfill="1" yexpand="1">
-        <field name="option_benefits" group="benefits" mode="tree" colspan="4" yexpand="0" view_ids="claim_indemnification_group.option_benefit_view_list" expand_toolbar="0"/>
+        <field name="option_benefits" group="benefits" mode="tree" colspan="4" yexpand="0" view_ids="claim_indemnification_group.option_benefit_view_list" expand_toolbar="0" height="100"/>
     </group>
     <field name="option_benefits" group="benefits" mode="form" colspan="4" view_ids="claim_indemnification_group.option_benefit_view_form" expand_toolbar="0"/>
 </form>
