--- a/modules/account_per_product/view/reconcile_show_form.xml
+++ b/modules/account_per_product/view/reconcile_show_form.xml
@@ -2,7 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/field[@name='post_leftovers']" position="after">
+	<xpath expr="/form/group[@id='head_fields']/field[@name='post_leftovers']" position="after">
         <label name="product"/>
         <field name="product"/>
     </xpath>
