account_payment_sepa_cog: Allow to have a single snapshot for all the moves of all payments failed by the same CAMT054 file (#2621)
Fix #11094

--- a/modules/account_aggregate/view/journal_form.xml
+++ b/modules/account_aggregate/view/journal_form.xml
@@ -6,7 +6,7 @@ this repository contains the full copyright notices and license terms. -->
         <newline/>
         <label name="aggregate"/>
         <field name="aggregate"/>
-        <label name="aggregate_posting"/>
-        <field name="aggregate_posting"/>
+        <label name="aggregate_posting_behavior"/>
+        <field name="aggregate_posting_behavior"/>
     </xpath>
 </data>
