rule_engine: Add description field on rule engine object (#2761)
Fix #11543

--- a/modules/rule_engine/view/rule_engine_form.xml
+++ b/modules/rule_engine/view/rule_engine_form.xml
@@ -33,6 +33,9 @@ this repository contains the full copyright notices and license terms. -->
                 </notebook>
             </group>
         </page>
+        <page name="description">
+            <field name="description" colspan="4"/>
+        </page>
         <page name="tags">
             <field name="tags" colspan="4"/>
         </page>
