coog_core: Add configuration on event type action to delayed execution (#2796)
Fix #11664

--- a/modules/coog_core/view/event_type_action_form.xml
+++ b/modules/coog_core/view/event_type_action_form.xml
@@ -13,6 +13,8 @@ this repository contains the full copyright notices and license terms. -->
     <newline/>
     <label name="priority"/>
     <field name="priority"/>
+    <label name="at_commit"/>
+    <field name="at_commit"/>
     <newline/>
     <label name="active"/>
     <field name="active"/>
