account_payment_sepa_cog: Allow to force SMNDA flag (#2816)
Fix #11160

--- a/modules/account_payment_sepa_cog/view/payment_journal_form.xml
+++ b/modules/account_payment_sepa_cog/view/payment_journal_form.xml
@@ -11,5 +11,8 @@ this repository contains the full copyright notices and license terms. -->
         <newline/>
         <label name="last_sepa_receivable_payment_creation_date"/>
         <field name="last_sepa_receivable_payment_creation_date"/>
+        <newline/>
+        <label name="force_smnda"/>
+        <field name="force_smnda"/>
     </xpath>
 </data>
