--- a/modules/account_payment_sepa_cog/template/pain.008.001.02.xml
+++ b/modules/account_payment_sepa_cog/template/pain.008.001.02.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<Document xmlns="urn:iso:std:iso:20022:tech:xsd:pain.008.001.02"
-    xmlns:xsd="http://www.w3.org/2001/XMLSchema"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns:xi="http://www.w3.org/2001/XInclude"
-    xmlns:py="http://genshi.edgewall.org/">
+<Document xmlns="urn:iso:std:iso:20022:tech:xsd:pain.008.001.02" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:py="http://genshi.edgewall.org/">
     <xi:include href="base.xml"/>
     <!-- version 2 uses BIC instead of BICFI -->
     <py:def function="FinancialInstitution(bank, only_bic=False)">
@@ -84,29 +80,37 @@ this repository contains the full copyright notices and license terms. -->
                 </PmtId>
                 <!-- PmtTpInf -->
                 <InstdAmt py:attrs="{'Ccy': payment.currency.code}">${payment.amount}</InstdAmt>
-                <!-- ChrgBr --> <!-- EPC only at payment information level -->
+                <!-- ChrgBr -->
+                <!-- EPC only at payment information level -->
                 <DrctDbtTx>
                     <MndtRltdInf py:with="mandate = payment.sepa_mandate">
                         <MndtId>${mandate.identification}</MndtId>
                         <DtOfSgntr>${mandate.signature_date.isoformat()}</DtOfSgntr>
                         <py:if test="mandate.amendment_of and not any([x.state == 'succeeded' for x in mandate.payments])">
-                        <AmdmntInd>true</AmdmntInd>
-                        <AmdmntInfDtls>
-                            <OrgnlDbtrAcct>
-                                <Id>
-                                    <py:choose test="mandate.amendment_of.account_number.account.bank.bic == mandate.account_number.account.bank.bic">
-                                    <py:when test="True">
-                                    <IBAN>${mandate.amendment_of.account_number.compact_iban}</IBAN>
-                                    </py:when>
-                                    <py:when test="False">
-                                    <Othr>
-                                        <Id>SMNDA</Id>
-                                    </Othr>
-                                    </py:when>
-                                    </py:choose>
-                                </Id>
-                            </OrgnlDbtrAcct>
-                        </AmdmntInfDtls>
+                            <AmdmntInd>true</AmdmntInd>
+                            <AmdmntInfDtls>
+                                <OrgnlDbtrAcct>
+                                    <Id>
+                                        <py:if test="group.journal.force_smnda is True">
+                                            <Othr>
+                                                <Id>SMNDA</Id>
+                                            </Othr>
+                                        </py:if>
+                                        <py:if test="group.journal.force_smnda is not True">
+                                            <py:choose test="mandate.amendment_of.account_number.account.bank.bic == mandate.account_number.account.bank.bic">
+                                                <py:when test="True">
+                                                    <IBAN>${mandate.amendment_of.account_number.compact_iban}</IBAN>
+                                                </py:when>
+                                                <py:when test="False">
+                                                    <Othr>
+                                                        <Id>SMNDA</Id>
+                                                    </Othr>
+                                                </py:when>
+                                            </py:choose>
+                                        </py:if>
+                                    </Id>
+                                </OrgnlDbtrAcct>
+                            </AmdmntInfDtls>
                         </py:if>
                         <!-- ElctrncSgntr -->
                         <!-- FrstColltnDt -->
