contract: Add configuration and batch to automatically end contract options (#2805)
* contract: Add configuration and batch to automatically end contract options

Fix #11698

--- a/modules/offered/view/option_description_form.xml
+++ b/modules/offered/view/option_description_form.xml
@@ -36,7 +36,7 @@ this repository contains the full copyright notices and license terms. -->
                     <newline/>
                 </page>
                 <page string="Ending" id="ending">
-                    <field name="ending_rule" mode="form"/>
+                    <field name="ending_rule" mode="form" colspan="4"/>
                 </page>
             </notebook>
         </page>
