--- a/modules/health/view/party_form.xml
+++ b/modules/health/view/party_form.xml
@@ -2,7 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/field[@name='birth_name']" position="after">
+    <xpath expr="/form/group[@id='ssn']" position="after">
         <label name="birth_order"/>
         <field name="birth_order"/>
     </xpath>
