offered: Add sequence_order and consistency checks on extra_data (#2840)
Fix #11837

--- a/modules/offered/view/extra_data_form.xml
+++ b/modules/offered/view/extra_data_form.xml
@@ -40,4 +40,6 @@ this repository contains the full copyright notices and license terms. -->
             <field name="tags" colspan="4"/>
         </page>
     </notebook>
+    <label name="sequence_order"/>
+    <field name="sequence_order"/>
 </form>
