--- a/modules/party_public_employment/view/employment_version_form.xml
+++ b/modules/party_public_employment/view/employment_version_form.xml
@@ -7,6 +7,13 @@
         <field name="administrative_situation_sub_status" widget="selection"/>
         <newline/>
     </xpath>
+    <xpath expr="/form/field[@name='work_time_type']" position="after">
+        <newline/>
+        <label name="work_subdivision"/>
+        <field name="work_subdivision"/>
+        <label name="work_country"/>
+        <field name="work_country"/>
+    </xpath>
     <xpath expr="/form/field[@name='gross_salary']" position="after">
         <newline/>
         <label name="increased_index"/>
