third_party_protocol_almerys: Add XML generation batch (#2849)
Fix #11526

--- a/modules/third_party_protocol_almerys/view/third_party_manager_protocol_form.xml
+++ b/modules/third_party_protocol_almerys/view/third_party_manager_protocol_form.xml
@@ -6,6 +6,8 @@
             <field name="almerys_ss_groupe"/>
             <label name="almerys_libelle_ss_groupe"/>
             <field name="almerys_libelle_ss_groupe"/>
+            <label name="almerys_support_tp"/>
+            <field name="almerys_support_tp"/>
         </page>
     </xpath>
 </data>
