--- a/modules/third_party_protocol_almerys/view/third_party_protocol_almerys_configuration_form.xml
+++ b/modules/third_party_protocol_almerys/view/third_party_protocol_almerys_configuration_form.xml
@@ -8,4 +8,6 @@
     <field name="number_sequence_v3"/>
     <label name="protocol_version"/>
     <field name="protocol_version"/>
+    <label name="autonomous"/>
+    <field name="autonomous"/>
 </form>
