--- a/modules/document_request/view/document_request_line_list.xml
+++ b/modules/document_request/view/document_request_line_list.xml
@@ -11,5 +11,6 @@ this repository contains the full copyright notices and license terms. -->
     <field name="for_object"/>
     <field name="attachment"/>
     <field name="attachment_data"/>
+    <field name="details"/>
     <field name="allow_force_receive" tree_invisible="1"/>
 </tree>
