party_employment: add withholding data (#2892)

--- a/modules/party_employment/view/employment_list.xml
+++ b/modules/party_employment/view/employment_list.xml
@@ -5,4 +5,5 @@
     <field name="start_date"/>
     <field name="end_date"/>
     <field name="employment_kind"/>
+    <field name="employment_identifier"/>
 </tree>
