--- a/modules/party_employment/view/employment_form.xml
+++ b/modules/party_employment/view/employment_form.xml
@@ -12,9 +12,12 @@
     <field name="start_date"/>
     <label name="end_date"/>
     <field name="end_date"/>
+    <label name="work_section"/>
+    <field name="work_section" widget="selection"/>
     <label name="employment_kind"/>
     <field name="employment_kind" widget="selection"/>
+    <label name="employment_identifier"/>
+    <field name="employment_identifier"/>
     <newline/>
     <field name="versions" colspan="4"/>
 </form>
-
