offered_insurance: Manage exclusions access (#2893)
Fix #11912

--- a/modules/offered_insurance/view/exclusion_kind_form.xml
+++ b/modules/offered_insurance/view/exclusion_kind_form.xml
@@ -7,4 +7,5 @@ this repository contains the full copyright notices and license terms. -->
     <label name="code"/>
     <field name="code"/>
     <field name="text" colspan="4"/>
+    <field name="groups" colspan="4"/>
 </form>
