--- a/modules/commission_insurance/view/contract_form.xml
+++ b/modules/commission_insurance/view/contract_form.xml
@@ -3,7 +3,7 @@
 this repository contains the full copyright notices and license terms. -->
 <data>
     <xpath expr="/form/notebook/page[@id='admin']" position="before">
-        <page name="broker">
+        <page name="broker" string="Distribution">
             <label name="broker"/>
             <field name="broker"/>
             <label name="agent"/>
