--- a/modules/contract_insurance_health_fr/view/party_form.xml
+++ b/modules/contract_insurance_health_fr/view/party_form.xml
@@ -2,11 +2,9 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/notebook/page[@id='general']" position="inside">
-        <newline/>
-        <group id="health_complement" colspan="6" col="6">
-            <label name="main_health_complement"/>
-            <field name="main_health_complement"/>
-        </group>
+    <xpath expr="/form/notebook/page[@id='health_data']" position="inside">
+	        <group id="health_complement" colspan="6" col="6">
+	            <field name="main_health_complement"/>
+	        </group>
     </xpath>
 </data>
