--- a/modules/report_engine/view/report_template_version_form.xml
+++ b/modules/report_engine/view/report_template_version_form.xml
@@ -7,6 +7,7 @@ this repository contains the full copyright notices and license terms. -->
         <group id="name_data" col="2" colspan="1">
             <field name="name"/>
             <field name="data" xexpand="0"/>
+            <field name="shared_template" xexpand="0"/>
         </group>
         <label name="start_date" xalign="0"/>
         <field name="start_date"/>
