contract_noemie: handle noemie during endorsement (#3013)
Fix #11778

--- a/modules/contract_noemie/view/covered_element_simple_form.xml
+++ b/modules/contract_noemie/view/covered_element_simple_form.xml
@@ -4,6 +4,10 @@ this repository contains the full copyright notices and license terms. -->
 <data>
     <xpath expr="//field[@name='party']" position="after">
         <group id="noemie_management" colspan="2" col="2" string="Noemie management">
+            <label name="noemie_start_date"/>
+            <field name="noemie_start_date"/>
+            <label name="noemie_end_date"/>
+            <field name="noemie_end_date"/>
             <label name="noemie_status"/>
             <field name="noemie_status"/>
             <label name="noemie_update_date"/>
