--- a/modules/third_party_right_management/view/third_party_period_list.xml
+++ b/modules/third_party_right_management/view/third_party_period_list.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0"?>
 <tree>
+    <field name="party"/>
     <field name="option"/>
-    <field name="protocol"/>
     <field name="start_date"/>
     <field name="end_date"/>
     <field name="send_after"/>
     <field name="status"/>
+    <field name="protocol"/>
+    <field name="color" tree_invisible="1"/>
 </tree>
