--- a/modules/premium/view/premium_list.xml
+++ b/modules/premium/view/premium_list.xml
@@ -3,7 +3,7 @@
 this repository contains the full copyright notices and license terms. -->
 <tree>
     <field name="rec_name"/>
-    <field name="amount" sum="Amount"/>
+    <field name="amount" sum="Amount" highlight_sum="1"/>
     <field name="frequency"/>
     <field name="start"/>
     <field name="end"/>
