--- a/modules/table/view/dimension_value_form.xml
+++ b/modules/table/view/dimension_value_form.xml
@@ -25,4 +25,6 @@ this repository contains the full copyright notices and license terms. -->
     <field name="start_date"/>
     <label name="end_date"/>
     <field name="end_date"/>
+    <label name="rec_name"/>
+    <field name="rec_name"/>
 </form>
