--- a/modules/contract_insurance_invoice/view/contract_billing_information_list.xml
+++ b/modules/contract_insurance_invoice/view/contract_billing_information_list.xml
@@ -7,6 +7,7 @@ this repository contains the full copyright notices and license terms. -->
     <field name="billing_mode"/>
     <field name="direct_debit"/>
     <field name="direct_debit_day"/>
+    <field name="process_method"/>
     <field name="payer"/>
     <field name="direct_debit_account"/>
     <field name="suspended" tree_invisible="1"/>
