--- a/modules/endorsement_party/view/party_change_address_displayer_form.xml
+++ b/modules/endorsement_party/view/party_change_address_displayer_form.xml
@@ -2,8 +2,13 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <form>
-    <field name="previous_address" mode="form" expand_toolbar="0"/>
-    <field name="is_new" invisible="1"/>
-    <field name="address_endorsement" invisible="1"/>
-    <field name="new_address" mode="form" expand_toolbar="0"/>
+    <group id="previous_address" colspan="2" string="Previous address" yexpand="1" yfill="1">
+        <field name="previous_address" mode="form" expand_toolbar="0"/>
+        <field name="is_new" invisible="1"/>
+        <field name="address_endorsement" invisible="1"/>
+    </group>
+    <newline/>
+    <group id="new_address" colspan="2" string="New address"  yexpand="1" yfill="1">
+        <field name="new_address" mode="form" expand_toolbar="0"/>
+    </group>
 </form>
