account_payment_sepa_cog: Allow to customize sepa remittance information (#3027)
Fix #12319

--- a/modules/account_payment_sepa_cog/view/payment_journal_form.xml
+++ b/modules/account_payment_sepa_cog/view/payment_journal_form.xml
@@ -14,5 +14,7 @@ this repository contains the full copyright notices and license terms. -->
         <newline/>
         <label name="force_smnda"/>
         <field name="force_smnda"/>
+        <label name="remittance_info"/>
+        <field name="remittance_info"/>
     </xpath>
 </data>
