document_request_electronic: Allow to customize electronic signature (#3025)
Fix #12321

--- a/modules/document_request_electronic_signature/view/document_description_form.xml
+++ b/modules/document_request_electronic_signature/view/document_description_form.xml
@@ -6,5 +6,10 @@ this repository contains the full copyright notices and license terms. -->
         <newline/>
         <label name="digital_signature_required"/>
         <field name="digital_signature_required"/>
+        <newline/>
+        <label name="signature_configuration"/>
+        <field name="signature_configuration"/>
+        <label name="signature_credential"/>
+        <field name="signature_credential"/>
     </xpath>
 </data>
