contract_insurance_invoice: Add a threshold for per_invoice fees (#3122)
Fix #12531

--- a/modules/premium/view/fee_form.xml
+++ b/modules/premium/view/fee_form.xml
@@ -16,6 +16,11 @@ this repository contains the full copyright notices and license terms. -->
     </group>
     <label name="frequency"/>
     <field name="frequency"/>
+    <label name="invoice_amount_threshold"/>
+    <group name="invoice_amount_threshold" string="">
+        <field name="invoice_amount_threshold" xexpand="0"/>
+        <label name="currency_symbol" string="" xexpand="1" xalign="0"/>
+    </group>
     <newline/>
     <label name="rate"/>
     <group name="rate" string="">
