document_request: add waiting validation status on attachment (#3110)
Fix #12567

--- a/modules/document_request/view/attachment_form.xml
+++ b/modules/document_request/view/attachment_form.xml
@@ -5,5 +5,7 @@ this repository contains the full copyright notices and license terms. -->
     <xpath expr="/form/group/field[@name='document_desc']" position="after">
         <label name="status"/>
         <field name="status"/>
+        <label name="status_change_date"/>
+        <field name="status_change_date"/>
     </xpath>
 </data>
