--- a/modules/contract_insurance/view/manage_exclusion_select_exclusion_list.xml
+++ b/modules/contract_insurance/view/manage_exclusion_select_exclusion_list.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0"?>
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<tree>
-    <field name="exclusion" expand="1"/>
-    <field name="option_string" expand="1"/>
+<tree editable="bottom">
+    <field name="exclusion" expand="1" readonly="1"/>
+    <field name="option_string" expand="1" readonly="1"/>
+    <field name="comment" expand="1"/>
     <field name="options" tree_invisible="1"/>
     <field name="parent" tree_invisible="1"/>
 </tree>
