--- a/modules/contract_insurance/view/option_exclusion_list.xml
+++ b/modules/contract_insurance/view/option_exclusion_list.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0"?>
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<tree editable="bottom">
+<tree>
+    <field name="option"/>
     <field name="exclusion"/>
-    <field name="action"/>
     <field name="comment"/>
-    <field name="exclusion_src" tree_invisible="1"/>
 </tree>
