--- a/modules/endorsement_party/view/party_change_address_form.xml
+++ b/modules/endorsement_party/view/party_change_address_form.xml
@@ -3,6 +3,7 @@
 this repository contains the full copyright notices and license terms. -->
 <form>
     <group id="endorsement_info" colspan="2">
+        <field name="party_id"/>
         <label name="effective_date"/>
         <field name="effective_date"/>
         <label name="endorsement_part"/>
