document_request: add document request lines APIs (#3134)
https://support.coopengo.com/issues/12341

--- a/modules/document_request/view/document_request_line_card.xml
+++ b/modules/document_request/view/document_request_line_card.xml
@@ -25,5 +25,7 @@ this repository contains the full copyright notices and license terms. -->
         <field name="attachment"/>
         <label name="attachment_data"/>
         <field name="attachment_data"/>
+        <label name="details"/>
+        <field name="details"/>
     </group>
 </form>
