--- a/modules/document_request/view/document_description_form.xml
+++ b/modules/document_request/view/document_description_form.xml
@@ -6,5 +6,8 @@ this repository contains the full copyright notices and license terms. -->
         <newline/>
         <label name="reception_requires_attachment"/>
         <field name="reception_requires_attachment"/>
+        <newline/>
+        <label name="prerequisite"/>
+        <field name="prerequisite"/>
     </xpath>
 </data>
